--- a/js.html
+++ b/js.html
@@ -55,11 +55,11 @@
     <!-- Banner-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            <button style="background-color: rgb(245, 203, 14);" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            <button style="background-color: rgb(245, 203, 14);" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            <button style="background-color: rgb(245, 203, 14);" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
@@ -101,7 +101,7 @@
         <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
                 <h2 class="accordion-header h2" id="panelsStayOpen-headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                         aria-controls="panelsStayOpen-collapseOne">
                         ¿Que es JS?
@@ -119,7 +119,7 @@
                                     estática para que la veas, muestra oportunas actualizaciones de contenido, mapas
                                     interactivos, animación de
                                     Gráficos 2D/3D, desplazamiento de máquinas reproductoras de vídeo, etc.</p><br>
-                                <button
+                                <button style="background-color: rgb(245, 203, 14);"
                                     onclick="location.href='https://developer.mozilla.org/es/docs/Learn/JavaScript/First_steps/What_is_JavaScript'"
                                     class="btn btn-info">Saber mas</button>
 
@@ -136,7 +136,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapseTwo">
                         ¿Para qué sirve JS?
@@ -155,7 +155,7 @@
                                     tiene que ver con el
                                     lenguaje de programación Java, ya que su principal función es ayudar a crear páginas
                                     webs dinámicas.</p><br>
-                                <button
+                                <button style="background-color: rgb(245, 203, 14);"
                                     onclick="location.href='https://soyrafaramos.com/que-es-javascript-para-que-sirve/'"
                                     class="btn btn-info">Saber mas</button>
                             </div>
@@ -170,7 +170,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapseThree">
                         Herramientas para utilizar JS
@@ -188,7 +188,7 @@
                                     HTML, <br>TextMate, Vim, UltraEdit, Coda, BBEdit, Komodo Edit, Visual Studio Code,
                                     <br> Brackets, CodeShare
                                 </p><br>
-                                <button onclick="location.href='https://kinsta.com/es/blog/mejores-editores-texto/'"
+                                <button style="background-color: rgb(245, 203, 14);" onclick="location.href='https://kinsta.com/es/blog/mejores-editores-texto/'"
                                     class="btn btn-info">Saber mas</button>
                             </div>
 
@@ -203,7 +203,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-heading6">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapse6" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapse6">
                         Tips para usarlo de la manera adecuada
@@ -223,7 +223,7 @@
                                     todos a ellos que te ayudarán a mejorar tu experiencia como desarrollador
                                     Javascript.
                                 </p><br>
-                                <button
+                                <button style="background-color: rgb(245, 203, 14);"
                                     onclick="location.href='https://latteandcode.medium.com/10-consejos-trucos-de-javascript-que-conviene-saber-109d8ef99a4c'"
                                     class="btn btn-info">Saber mas</button>
                             </div>
@@ -238,7 +238,7 @@
             </div>
             <div class="accordion-item">
                 <h2 class=" h2 accordion-header" id="panelsStayOpen-heading7">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapse7" aria-expanded="false"
                         aria-controls="panelsStayOpen-collapse7">
                         Cursos gratis: JavaScript desde cero
@@ -258,11 +258,11 @@
                                 <li>Programación básica de Platzi</li>
 
                                 <br>
-                                <button onclick="location.href='https://ed.team/cursos/javascript'"
+                                <button style="background-color: rgb(245, 203, 14);" onclick="location.href='https://ed.team/cursos/javascript'"
                                 class="btn btn-info">Curso EDteam</button>
-                                <button onclick="location.href='https://codigofacilito.com/cursos/javascript?app=true'"
+                                <button style="background-color: rgb(245, 203, 14);" onclick="location.href='https://codigofacilito.com/cursos/javascript?app=true'"
                                 class="btn btn-info ">Curso códigoF</button>
-                                <button
+                                <button style="background-color: rgb(245, 203, 14);"
                                     onclick="location.href='https://platzi.com/clases/1050-programacion-basica/25972-recap-programacion-basica/'"
                                     class="btn btn-info ">Curso platzi</button>
                             </div>
@@ -284,8 +284,7 @@
     <div class="container bg-light text-center rounded-1" data-aos="fade-down">
         <br>
         <h2 class="display-5"><strong>Cuestionario final</strong></h2>
-        <br>
-        <button id="cuestionario" class="btn btn-info">Dar clic al cuestionario</button><br><br>
+        <a href="./formJS.html"  style="background-color: rgb(245, 203, 14);" class="btn btn-info">Clic aqui para iniciar el cuestionario</a><br><br>
     </div>
 
 
@@ -296,7 +295,6 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/java.js"></script>
     <script>
         AOS.init();
     </script>
