agregando página info.html y opción en el menu

--- a/js.html
+++ b/js.html
@@ -27,11 +27,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <!--<a class="navbar-brand" href="#">
-                        <img src="" alt="" width="30" height="24">
-                      </a>-->
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./assets/img/Helprogram1.png" alt="logo" width="100">
+                    </a>
 
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="info.html">Sobre Nosotros</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,12 +58,13 @@
     <!-- Banner-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button style="background-color: rgb(245, 203, 14);" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button style="background-color: rgb(245, 203, 14);" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button style="background-color: rgb(245, 203, 14);" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
+            <button style="background-color: rgb(245, 203, 14);" type="button"
+                data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true"
+                aria-label="Slide 1"></button>
+            <button style="background-color: rgb(245, 203, 14);" type="button"
+                data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button style="background-color: rgb(245, 203, 14);" type="button"
+                data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -101,8 +105,8 @@
         <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
                 <h2 class="accordion-header h2" id="panelsStayOpen-headingOne">
-                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                         aria-controls="panelsStayOpen-collapseOne">
                         ¿Que es JS?
                     </button>
@@ -126,8 +130,8 @@
                             </div>
 
                             <div class="col-lg-4">
-                                <img src="./assets/img/que-es-javaScript.jpg" class="img-fluid rounded" height="200" width="300"
-                                    alt="logica">
+                                <img src="./assets/img/que-es-javaScript.jpg" class="img-fluid rounded" height="200"
+                                    width="300" alt="logica">
                             </div>
                         </div>
 
@@ -136,9 +140,9 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseTwo">
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed"
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo"
+                        aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                         ¿Para qué sirve JS?
                     </button>
                 </h2>
@@ -170,9 +174,9 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapseThree">
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed"
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
+                        aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
                         Herramientas para utilizar JS
                     </button>
                 </h2>
@@ -188,7 +192,8 @@
                                     HTML, <br>TextMate, Vim, UltraEdit, Coda, BBEdit, Komodo Edit, Visual Studio Code,
                                     <br> Brackets, CodeShare
                                 </p><br>
-                                <button style="background-color: rgb(245, 203, 14);" onclick="location.href='https://kinsta.com/es/blog/mejores-editores-texto/'"
+                                <button style="background-color: rgb(245, 203, 14);"
+                                    onclick="location.href='https://kinsta.com/es/blog/mejores-editores-texto/'"
                                     class="btn btn-info">Saber mas</button>
                             </div>
 
@@ -203,9 +208,9 @@
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-heading6">
-                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapse6" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapse6">
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed"
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse6"
+                        aria-expanded="false" aria-controls="panelsStayOpen-collapse6">
                         Tips para usarlo de la manera adecuada
                     </button>
                 </h2>
@@ -238,9 +243,9 @@
             </div>
             <div class="accordion-item">
                 <h2 class=" h2 accordion-header" id="panelsStayOpen-heading7">
-                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#panelsStayOpen-collapse7" aria-expanded="false"
-                        aria-controls="panelsStayOpen-collapse7">
+                    <button style="background-color: rgb(245, 203, 14);" class="accordion-button collapsed"
+                        type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse7"
+                        aria-expanded="false" aria-controls="panelsStayOpen-collapse7">
                         Cursos gratis: JavaScript desde cero
                     </button>
                 </h2>
@@ -258,10 +263,12 @@
                                 <li>Programación básica de Platzi</li>
 
                                 <br>
-                                <button style="background-color: rgb(245, 203, 14);" onclick="location.href='https://ed.team/cursos/javascript'"
-                                class="btn btn-info">Curso EDteam</button>
-                                <button style="background-color: rgb(245, 203, 14);" onclick="location.href='https://codigofacilito.com/cursos/javascript?app=true'"
-                                class="btn btn-info ">Curso códigoF</button>
+                                <button style="background-color: rgb(245, 203, 14);"
+                                    onclick="location.href='https://ed.team/cursos/javascript'"
+                                    class="btn btn-info">Curso EDteam</button>
+                                <button style="background-color: rgb(245, 203, 14);"
+                                    onclick="location.href='https://codigofacilito.com/cursos/javascript?app=true'"
+                                    class="btn btn-info ">Curso códigoF</button>
                                 <button style="background-color: rgb(245, 203, 14);"
                                     onclick="location.href='https://platzi.com/clases/1050-programacion-basica/25972-recap-programacion-basica/'"
                                     class="btn btn-info ">Curso platzi</button>
@@ -284,7 +291,8 @@
     <div class="container bg-light text-center rounded-1" data-aos="fade-down">
         <br>
         <h2 class="display-5"><strong>Cuestionario final</strong></h2>
-        <a href="./formJS.html"  style="background-color: rgb(245, 203, 14);" class="btn btn-info">Clic aqui para iniciar el cuestionario</a><br><br>
+        <a href="./formJS.html" style="background-color: rgb(245, 203, 14);" class="btn btn-info">Clic aqui para iniciar
+            el cuestionario</a><br><br>
     </div>
 
 
