--- a/logica.html
+++ b/logica.html
@@ -27,11 +27,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <!--<a class="navbar-brand" href="#">
-                        <img src="" alt="" width="30" height="24">
-                      </a>-->
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./assets/img/Helprogram1.png" alt="logo" width="100">
+                    </a>
 
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="info.html">Sobre Nosotros</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -211,13 +214,13 @@
         <br>
 
     </div>
-<br>
-<div class="container bg-light text-center rounded-1" data-aos="fade-down">
     <br>
-    <h2 class="display-5"><strong>Cuestionario final</strong></h2>
-    <br>
-    <a href="./formLogica.html" class="btn btn-dark">Clic aqui para iniciar</a><br><br>
-</div>
+    <div class="container bg-light text-center rounded-1" data-aos="fade-down">
+        <br>
+        <h2 class="display-5"><strong>Cuestionario final</strong></h2>
+        <br>
+        <a href="./formLogica.html" class="btn btn-dark">Clic aqui para iniciar</a><br><br>
+    </div>
 
 
     <footer class="footer1 footer bg-black small text-center text-white-50">
