agcambio en el index.html

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">HTML Y CSS</h5>
+                <h5 class="card-title"><strong>HTML Y CSS</strong></h5>
                 <p class="card-text">Curso de HTML y CSS, en este curso aprenderas algunos de los conceptos mas
                   importantes sobre etiquetas y clases.</p>
                 <br>
@@ -187,7 +187,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">LÓGICA Y ALGORÍTMIA</h5>
+                <h5 class="card-title"><strong>LÓGICA Y ALGORÍTMIA</strong></h5>
                 <p class="card-text">Curso de Lógica y Algoritmia, en el curso se aprendera sobre los diferentes
                   conceptos que maneja el tema, conecto y operadores lógicos.</p>
                 <br>
@@ -206,7 +206,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">JAVASCRIPT</h5>
+                <h5 class="card-title"><strong>JAVASCRIPT</strong></h5>
                 <p class="card-text"> Curso de javascript donde aprenderas algunos tips y herramientas para mejorar tu
                   experiencia con este lenguaje</p>
                 <br>
@@ -224,7 +224,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">BOOTSTRAP</h5>
+                <h5 class="card-title"><strong>BOOTSTRAP</strong></h5>
                 <p class="card-text">Curso de Boostrap donde se aprendera sobre las diferentes formas de instalar
                   Boostrap, que es Boostrap y entre otros temas.</p>
                 <br>
@@ -243,7 +243,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">REPOSITORIOS</h5>
+                <h5 class="card-title"><strong>REPOSITORIOS</strong></h5>
                 <p class="card-text">Curso de repositorios donde conocerás diferentes aplicaciones para alojar proyectos
                   y comandos para desenvolverte en ellas</p>
                 <br>
@@ -261,7 +261,7 @@
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">SCRUM</h5>
+                <h5 class="card-title"><strong>SCRUM</strong></h5>
                 <p class="card-text">Curso de Scrum, en este curso aprenderás sobre la metodología ágil Scrum, sus
                   componentes y como aplicarlo a tus proyectos</p>
                 <br>
