--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/inicio.css">
   <title>HELPROGRAM</title>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -114,7 +115,7 @@
           mundo de la porogramación, también encontrarés muchos datos y consejos interesantes para facilitar aun mas tu aprendizaje, asi que animate y empieza este camino tan espectacular.  </p>
       </div>-->
 
-  <div class="container rounded-1 bg-light">
+  <div class="container rounded-1 bg-light" data-aos="fade-down">
     <br>
     <h3 class="display-5 bg-dark"><span class="badge badge-secondary">HELPROGRAM</span></h3>
     <hr>
@@ -157,7 +158,7 @@
     </div>-->
 
   <br><br>
-  <div class="containeer">
+  <div class="containeer" data-aos="fade-down">
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card mb-3" style="max-width: 540px;">
@@ -286,10 +287,14 @@
     </li>
   </ul>
 
-
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
