--- a/scrum.html
+++ b/scrum.html
@@ -382,8 +382,10 @@
         <br>
         <h2 class="display-5"><strong>Cuestionario final</strong></h2>
         <br>
-        <button id="cuestionario" class="btn" style="background-color: rgb(7, 209, 245);">Dar clic al
-            cuestionario</button><br><br>
+        <div id="pantallaBootstrap" class=""></div>
+        <a href="./formScrum.html" class="btn btn-info">Clic aqui para iniciar</a>
+        <br>
+        <br>
     </div>
 
     <br>
@@ -398,7 +400,7 @@
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/scrum.js"></script>
+    
     <script>
         AOS.init();
     </script>
