--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     </li>
 
   </ul>
-
-
+  
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -60,37 +59,37 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./assets/img/html-css.jpg" class="d-block w-100" alt="error">
+        <img src="./assets/img/html-css.jpg" class="d-block w-100" alt="image" width="600" height="600" alt="error">
         <div class="carousel-caption d-none d-md-block">
           <h5><strong>HTML Y CSS</strong></h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/logica.jpg" class="d-block w-100" alt="error">
+        <img src="./assets/img/logica.jpg" class="d-block w-100" alt="image" width="600" height="600" alt="error">
         <div class="carousel-caption d-none d-md-block">
           <h5><strong>Logica y algoritmia</strong></h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/js.png" class="d-block w-100" alt="error">
+        <img src="./assets/img/js.png" class="d-block w-100" alt="image" width="600" height="600" alt="error">
         <div class="carousel-caption d-none d-md-block">
           <h5><strong>JavaScript</strong></h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/bootstrap.png" class="d-block w-100" alt="error">
+        <img src="./assets/img/bootstrap.png" class="d-block w-100" alt="image" width="600" height="600" alt="error">
         <div class="carousel-caption d-none d-md-block">
           <h5><strong>Bootstrap</strong></h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/repositorio.png" class="d-block w-100" alt="error">
+        <img src="./assets/img/repositorio.png" class="d-block w-100" alt="image" width="600" height="600" alt="error">
         <div class="carousel-caption d-none d-md-block">
           <h5><strong>Repositorios</strong></h5>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/img/scrum1.jpg" class="d-block w-100" alt="error">
+        <img src="./assets/img/scrum1.jpg" class="d-block w-100" alt="image" width="600" height="600" alt="error">
         <div class="carousel-caption d-none d-md-block">
           <h5><strong>Scrum</strong></h5>
         </div>
@@ -164,7 +163,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="./assets/img/logohtml.png" class="img-fluid rounded-start" alt="...">
+              <img src="./assets/img/logohtml.png" class="img-fluid rounded-start" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -184,7 +183,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="./assets/img/logologica.png" class="img-fluid rounded-start" alt="...">
+              <img src="./assets/img/logologica.png" class="img-fluid rounded-start" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -203,7 +202,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="./assets/img/logojs.png" class="img-fluid rounded-start" alt="...">
+              <img src="./assets/img/logojs.png" class="img-fluid rounded-start" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -221,7 +220,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="./assets/img/logobootstrapp.png" class="img-fluid rounded-start" alt="...">
+              <img src="./assets/img/logobootstrapp.png" class="img-fluid rounded-start" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -240,7 +239,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="./assets/img/logogithub.png" class="img-fluid rounded-start" alt="...">
+              <img src="./assets/img/logogithub.png" class="img-fluid rounded-start" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -258,7 +257,7 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="./assets/img/logoscrumm.png" class="img-fluid rounded-start" alt="...">
+              <img src="./assets/img/logoscrumm.png" class="img-fluid rounded-start" alt="image">
             </div>
             <div class="col-md-8">
               <div class="card-body">
@@ -294,7 +293,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  
+
 </body>
 
 </html>
