agregando el  footer en los formularios

--- a/formJS.html
+++ b/formJS.html
@@ -34,10 +34,11 @@
                 <input class="form-control" type="text" name="nombre" maxlength="100">
                 <div class="error" id="nombreErr"></div>
             </div>
-            
+
             <br>
             <div class="card">
-                <p><strong>Primera pregunta</strong>, ¿Sublime Text, Atom, Notepad++, CoffeeCup – El Editor de HTML son herramientas para utilizar JS? verdadero(v) o falso(f)</p>
+                <p><strong>Primera pregunta</strong>, ¿Sublime Text, Atom, Notepad++, CoffeeCup – El Editor de HTML son
+                    herramientas para utilizar JS? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p1" value="v"> Verdadero</p>
                     <p><input type="radio" name="p1" value="f"> Falso</p>
@@ -59,7 +60,10 @@
 
 
             <div class="card">
-                <p><strong>Tercera pregunta</strong>, ¿Con este lenguaje de programación del lado del cliente (no en el servidor) podemos crear efectos y animaciones sin ninguna interacción, o respondiendo a eventos causados por el propio usuario tales como botones pulsados y modificaciones del DOM (document object model).?
+                <p><strong>Tercera pregunta</strong>, ¿Con este lenguaje de programación del lado del cliente (no en el
+                    servidor) podemos crear efectos y animaciones sin ninguna interacción, o respondiendo a eventos
+                    causados por el propio usuario tales como botones pulsados y modificaciones del DOM (document object
+                    model).?
                     verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p3" value="v"> Verdadero</p>
@@ -76,16 +80,17 @@
                 </div>
                 <div class="error" id="p4Err"></div>
             </div>
-<br>
+            <br>
             <div class="card">
-                <p><strong>Quinta pregunta</strong>, ¿Javascript es el lenguaje más empleado dentro del desarrollo fullstack? verdadero(v) o falso(f)</p>
+                <p><strong>Quinta pregunta</strong>, ¿Javascript es el lenguaje más empleado dentro del desarrollo
+                    fullstack? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p5" value="v"> Verdadero</p>
                     <p><input type="radio" name="p5" value="f"> Falso</p>
                 </div>
                 <div class="error" id="p5Err"></div>
             </div>
-<br>
+            <br>
 
             <input class="btn btn-dark" type="submit" id="submit" style="width: 100%;" value="ENVIAR">
             <br>
@@ -95,6 +100,10 @@
 
 
     </div>
+    <footer class="footer footer1 bg-black small text-center text-white-50">
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/formjs.js"></script>
