--- a/formLogica.html
+++ b/formLogica.html
@@ -34,10 +34,12 @@
                 <input class="form-control" type="text" name="nombre" maxlength="100">
                 <div class="error" id="nombreErr"></div>
             </div>
-            
+
             <br>
             <div class="card">
-                <p><strong>Primera pregunta</strong>, ¿la lógica es la ciencia que estudia los métodos de razonamiento la cual proporciona alguna reglas y técnicas para determinar si un argumento es válido o no? verdadero(v) o falso(f)</p>
+                <p><strong>Primera pregunta</strong>, ¿la lógica es la ciencia que estudia los métodos de razonamiento
+                    la cual proporciona alguna reglas y técnicas para determinar si un argumento es válido o no?
+                    verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p1" value="v"> Verdadero</p>
                     <p><input type="radio" name="p1" value="f"> Falso</p>
@@ -47,7 +49,8 @@
             <br>
 
             <div class="card">
-                <p><strong>Segunda pregunta</strong>, ¿la lógica matematica no es una Ciencia que estudia los procedimientos para distinguir si un razonamiento es correcto o incorrecto?
+                <p><strong>Segunda pregunta</strong>, ¿la lógica matematica no es una Ciencia que estudia los
+                    procedimientos para distinguir si un razonamiento es correcto o incorrecto?
                     verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p2" value="v"> Verdadero</p>
@@ -59,7 +62,8 @@
 
 
             <div class="card">
-                <p><strong>Tercera pregunta</strong>, ¿Una proposición o enunciado es una oración que puede ser falsa o verdadera pero no ambas a la vez?
+                <p><strong>Tercera pregunta</strong>, ¿Una proposición o enunciado es una oración que puede ser falsa o
+                    verdadera pero no ambas a la vez?
                     verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p3" value="v"> Verdadero</p>
@@ -69,7 +73,8 @@
             </div>
             <br>
             <div class="card">
-                <p><strong>Cuarta pregunta</strong>, segun la propoción q: Dolly fue la primera oveja clonada, es una proposición falsa, verdadero(v) o falso(f)</p>
+                <p><strong>Cuarta pregunta</strong>, segun la propoción q: Dolly fue la primera oveja clonada, es una
+                    proposición falsa, verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p4" value="v"> Verdadero</p>
                     <p><input type="radio" name="p4" value="f"> Falso</p>
@@ -79,7 +84,9 @@
             <br>
 
             <div class="card">
-                <p><strong>Quinta pregunta</strong>, Es la parte de la lógica que estudia las proposiciones y símbolos utilizados en nuevas formaciones de las mismas que podrán ser verdaderas o falsas, señaladas por reglas formales, llamados conectores lógicos verdadero(v) o falso(f)</p>
+                <p><strong>Quinta pregunta</strong>, Es la parte de la lógica que estudia las proposiciones y símbolos
+                    utilizados en nuevas formaciones de las mismas que podrán ser verdaderas o falsas, señaladas por
+                    reglas formales, llamados conectores lógicos verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p5" value="v"> Verdadero</p>
                     <p><input type="radio" name="p5" value="f"> Falso</p>
@@ -98,6 +105,10 @@
 
 
     </div>
+    <footer class="footer footer1 bg-black small text-center text-white-50">
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/logica.js"></script>
