--- a/formRepositorios.html
+++ b/formRepositorios.html
@@ -36,10 +36,12 @@
                 <input class="form-control" type="text" name="nombre" maxlength="100">
                 <div class="error" id="nombreErr"></div>
             </div>
-            
+
             <br>
             <div class="card">
-                <p><strong>Primera pregunta</strong>, ¿Git Hub es un portal creado para alojar el código de las aplicaciones de cualquier desarrollador, y que fue comprado por Microsoft en junio del 2018? verdadero(v) o falso(f)</p>
+                <p><strong>Primera pregunta</strong>, ¿Git Hub es un portal creado para alojar el código de las
+                    aplicaciones de cualquier desarrollador, y que fue comprado por Microsoft en junio del 2018?
+                    verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p1" value="v"> Verdadero</p>
                     <p><input type="radio" name="p1" value="f"> Falso</p>
@@ -61,7 +63,10 @@
 
 
             <div class="card">
-                <p><strong>Tercera pregunta</strong>, GitLab es una herramienta de ciclo de vida y repositorio de Git. Es un completo DevOps plataforma, que permite a los profesionales gestionar y realizar diversar tareas de proyecto. Las tareas incluyen la planificaión del proyecto, la gestión del código fuente, el mantenimiento de la seguridad y el seguimiento
+                <p><strong>Tercera pregunta</strong>, GitLab es una herramienta de ciclo de vida y repositorio de Git.
+                    Es un completo DevOps plataforma, que permite a los profesionales gestionar y realizar diversar
+                    tareas de proyecto. Las tareas incluyen la planificaión del proyecto, la gestión del código fuente,
+                    el mantenimiento de la seguridad y el seguimiento
                     verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p3" value="v"> Verdadero</p>
@@ -73,7 +78,11 @@
 
 
             <div class="card">
-                <p><strong>Cuarta pregunta</strong>, Bitbucket es una herramienta para equipos profesionales. Revisa, gestiona Y colabora con tu código. Crea prueba e implementa con confianza con CI/CD incorporado. Bitbucket es un servicio en línea que ofrece muchas funcionalidades: Almacenamiento de repositorios en línea: esto permite trabajar a varias personas sobre el repositorio almacenado en Bitbucket verdadero(v) o falso(f)</p>
+                <p><strong>Cuarta pregunta</strong>, Bitbucket es una herramienta para equipos profesionales. Revisa,
+                    gestiona Y colabora con tu código. Crea prueba e implementa con confianza con CI/CD incorporado.
+                    Bitbucket es un servicio en línea que ofrece muchas funcionalidades: Almacenamiento de repositorios
+                    en línea: esto permite trabajar a varias personas sobre el repositorio almacenado en Bitbucket
+                    verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p4" value="v"> Verdadero</p>
                     <p><input type="radio" name="p4" value="f"> Falso</p>
@@ -83,9 +92,11 @@
             <br>
 
 
-            
+
             <div class="card">
-                <p><strong>Quinta pregunta</strong>, GitLab es una herramienta de ciclo de vida y repositorio de Git. Es un completo DevOps plataforma, que permite a los profesionales gestionar y realizar diversar tareas de proyecto verdadero(v) o falso(f)</p>
+                <p><strong>Quinta pregunta</strong>, GitLab es una herramienta de ciclo de vida y repositorio de Git. Es
+                    un completo DevOps plataforma, que permite a los profesionales gestionar y realizar diversar tareas
+                    de proyecto verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p5" value="v"> Verdadero</p>
                     <p><input type="radio" name="p5" value="f"> Falso</p>
@@ -104,6 +115,10 @@
 
 
     </div>
+    <footer class="footer footer1 bg-black small text-center text-white-50">
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/formr.js"></script>
