--- a/formScrum.html
+++ b/formScrum.html
@@ -34,7 +34,7 @@
                 <input class="form-control" type="text" name="nombre" maxlength="100">
                 <div class="error" id="nombreErr"></div>
             </div>
-            
+
             <br>
             <div class="card">
                 <p><strong>Primera pregunta</strong> Scrum solo sirve para realizar trabajos individuales
@@ -48,7 +48,8 @@
             <br>
 
             <div class="card">
-                <p><strong>Segunda pregunta</strong>, En Scrum se realizan entregas parciales y regulares del producto final
+                <p><strong>Segunda pregunta</strong>, En Scrum se realizan entregas parciales y regulares del producto
+                    final
                     verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p2" value="v"> Verdadero</p>
@@ -60,7 +61,8 @@
 
 
             <div class="card">
-                <p><strong>Tercera pregunta</strong>, Un sprint es un período breve de tiempo fijo en el que un equipo de scrum trabaja para completar una cantidad de trabajo establecida.
+                <p><strong>Tercera pregunta</strong>, Un sprint es un período breve de tiempo fijo en el que un equipo
+                    de scrum trabaja para completar una cantidad de trabajo establecida.
                     verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p3" value="v"> Verdadero</p>
@@ -70,7 +72,8 @@
             </div>
             <br>
             <div class="card">
-                <p><strong>Cuarta pregunta</strong>, ¿ El Scrum Diario es una reunión con un bloque de tiempo de 30 minutos web verdadero(v) o falso(f)</p>
+                <p><strong>Cuarta pregunta</strong>, ¿ El Scrum Diario es una reunión con un bloque de tiempo de 30
+                    minutos web verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p4" value="v"> Verdadero</p>
                     <p><input type="radio" name="p4" value="f"> Falso</p>
@@ -80,7 +83,8 @@
             <br>
 
             <div class="card">
-                <p><strong>Quinta pregunta</strong>, Durante la Revisión de Sprint, el Equipo Scrum y los interesados colaboran acerca de lo que se hizo durante el Sprint? verdadero(v) o falso(f)</p>
+                <p><strong>Quinta pregunta</strong>, Durante la Revisión de Sprint, el Equipo Scrum y los interesados
+                    colaboran acerca de lo que se hizo durante el Sprint? verdadero(v) o falso(f)</p>
                 <div class="form-inline">
                     <p><input type="radio" name="p5" value="v"> Verdadero</p>
                     <p><input type="radio" name="p5" value="f"> Falso</p>
@@ -99,6 +103,10 @@
 
 
     </div>
+    <footer class="footer footer1 bg-black small text-center text-white-50">
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/formscrum.js"></script>
