--- a/formHtmlCss.html
+++ b/formHtmlCss.html
@@ -152,6 +152,10 @@
 
 
     </div>
+    <footer class="footer footer1 bg-black small text-center text-white-50">
+        <div class="container px-4 px-lg-5">Copyright &copy; Página web desarrollada por el equipo Bichotas <br>2021
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/htmlycss.js"></script>
