--- a/formScrum.html
+++ b/formScrum.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap</title>
+    <title>Scrum</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/scrum.css">
     <style>
         .error {
             background-color: rgb(219, 8, 8);
@@ -18,12 +18,12 @@
     </style>
 </head>
 
-<body class="body1">
+<body class="body">
     <br>
     <br>
     <div class="container bg-light rounded-1 text-center" data-aos="fade-down">
         <img src="assets/img/Helprogram1.png" width="200" class="logo">
-        <h1 class="display-5">Cuestionario final de Bootstrap</h1>
+        <h1 class="display-5">Cuestionario final de Scrum</h1>
         <a href="./index.html" class="btn btn-dark">Volver al Index</a>
         <br>
         <br>
