ajustes en el js

--- a/formRepositorios.html
+++ b/formRepositorios.html
@@ -121,7 +121,7 @@
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./assets/js/formr.js"></script>
+    <script src="./assets/js/formb.js"></script>
     <script>
         AOS.init();
     </script>
