--- a/formLogica.html
+++ b/formLogica.html
@@ -111,7 +111,7 @@
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./assets/js/logica.js"></script>
+    <script src="./assets/js/formb.js"></script>
     <script>
         AOS.init();
     </script>
