--- a/formJS.html
+++ b/formJS.html
@@ -106,7 +106,7 @@
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./assets/js/formb.js"></script>
+    <script src="./assets/js/formjs.js"></script>
     <script>
         AOS.init();
     </script>
