--- a/formScrum.html
+++ b/formScrum.html
@@ -109,7 +109,7 @@
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="./assets/js/formb.js"></script>
+    <script src="./assets/js/formscrum.js"></script>
     <script>
         AOS.init();
     </script>
